Fix some findbugs-issues and apply some code-cleanup and apply some smaller pull requests. This closes #74, This closes #75, This closes #76
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1812097 13f79535-47bb-0310-9956-ffa450edef68